// Copyright 2017 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package adapter.template.kubernetes;

import "mixer/v1/template/extensions.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_ATTRIBUTE_GENERATOR;

// kubernetes template represents data used to generate kubernetes attributes.
//
//
// Example config:
// ```
// apiVersion: "config.istio.io/v1alpha2"
// kind: kubernetes
// metadata:
//   name: attributes
//   namespace: istio-system
// spec:
//   # Pass the required attribute data to the adapter
//   source_uid: source.uid | ""
//   source_ip: source.ip | ip("0.0.0.0") # default to unspecified ip addr
//   destination_uid: destination.uid | ""
//   destination_ip: destination.ip | ip("0.0.0.0") # default to unspecified ip addr
//   attribute_bindings:
//     # Fill the new attributes from the adapter produced output.
//     # $out refers to an instance of OutputTemplate message
//     source.ip: $out.source_pod_ip
//     source.labels: $out.source_labels
//     source.namespace: $out.source_namespace
//     source.service: $out.source_service
//     source.serviceAccount: $out.source_service_account_name
//     destination.ip: $out.destination_pod_ip
//     destination.labels: $out.destination_labels
//     destination.namespace: $out.destination_mamespace
//     destination.service: $out.destination_service
//     destination.serviceAccount: $out.destination_service_account_name
// ```
message Template {
    string source_uid = 1;
    // This is temporary, DO NOT USE repeated bytes for IP_ADDRESS.
    // Before we release APA adapters, we need to introduce special types for representing IP_ADDPRESS
    repeated bytes source_ip = 2;

    string destination_uid = 3;
    // This is temporary, DO NOT USE repeated bytes for IP_ADDRESS.
    // Before we release APA adapters, we need to introduce special types for representing IP_ADDPRESS
    repeated bytes destination_ip = 4;

    string origin_uid = 5;
    // This is temporary, DO NOT USE repeated bytes for IP_ADDRESS.
    // Before we release APA adapters, we need to introduce special types for representing IP_ADDPRESS
    repeated bytes origin_ip = 6;
}

message OutputTemplate {
    // This is temporary, DO NOT USE repeated bytes for IP_ADDRESS.
    // Before we release APA adapters, we need to introduce special types for representing IP_ADDPRESS
    repeated bytes source_pod_ip = 1;
    string source_pod_name = 2;
    map<string, string> source_labels = 3;
    string source_namespace = 4;
    string source_service = 5;
    string source_service_account_name = 6;
    repeated bytes source_host_ip = 7;

    // This is temporary, DO NOT USE repeated bytes for IP_ADDRESS.
    // Before we release APA adapters, we need to introduce special types for representing IP_ADDPRESS
    repeated bytes destination_pod_ip = 8;
    string destination_pod_name = 9;
    map<string, string> destination_labels = 10;
    string destination_namespace = 11;
    string destination_service = 12;
    string destination_service_account_name = 13;
    repeated bytes destination_host_ip = 14;

    // This is temporary, DO NOT USE repeated bytes for IP_ADDRESS.
    // Before we release APA adapters, we need to introduce special types for representing IP_ADDPRESS
    repeated bytes origin_pod_ip = 15;
    string origin_pod_name = 16;
    map<string, string> origin_labels = 17;
    string origin_namespace = 18;
    string origin_service = 19;
    string origin_service_account_name = 20;
    repeated bytes origin_host_ip = 21;
}
